newInstance() -> CONSTRUCTOR.newInstance() in rsb-java/src/main/java/spread/SpreadConnection.java
The former has been deprecated.

* rsb-java/src/main/java/spread/SpreadConnection.java
  (SpreadConnection::instantiateAuthMethod): changed
  authclass{ -> .getDeclaredConstructor()}.newInstance()